--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^7.0.1",
-        "@inertiajs/react": "^2.1.5",
+        "@fortawesome/fontawesome-svg-core": "^7.0.1",
+        "@fortawesome/free-solid-svg-icons": "^7.0.1",
+        "@fortawesome/react-fontawesome": "^3.0.2",
+        "@inertiajs/react": "^2.2.0",
+        "@popperjs/core": "^2.11.8",
+        "bootstrap": "^5.3.8",
         "font-awesome": "^4.7.0",
         "react": "^19.1.1",
         "react-dom": "^19.1.1"
