--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "bootstrap": "^5.3.8",
         "font-awesome": "^4.7.0",
         "react": "^19.1.1",
-        "react-dom": "^19.1.1"
+        "react-dom": "^19.1.1",
+        "recharts": "^3.5.1"
     }
 }
